--- a/Restaurant/src/Pages/Confrim/Confrim.css
+++ b/Restaurant/src/Pages/Confrim/Confrim.css
@@ -3,23 +3,35 @@
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  background-color: #f5f5f5;
+  background: url('https://media.cooky.vn/images/blog-2016/nghe-thuat-trinh-bay-va-chup-anh-mon-an%208.jpg') center/cover no-repeat;
+  padding: 20px;
 }
 
 .container {
   width: 100%;
-  max-width: 800px;
+  max-width: 600px;
   margin: 0 auto;
+  background-color: transparent;
   padding: 20px;
 }
 
 .confirm_box {
-  background-color: #fff;
+  background-color: rgba(255, 255, 255, 0.8);
+  background-image: url('../../../public/vienmoi\(1\).jpg');
+  background-size: 100% 100%; /* Chiều ngang và chiều dọc đều 100% */
+  background-repeat: no-repeat; /* Đảm bảo hình ảnh không lặp lại */
+  background-position: center; /* Đặt hình ảnh ở giữa */
   padding: 20px;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-  border-radius: 10px;
+  border-radius: 8px;
   text-align: center;
-}
+  max-width: 500px;
+  margin: 0 auto;
+  border: 2px solid palevioletred; /* Add border to see the element */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+} 
 
 .confirm_box h1 {
   margin-bottom: 20px;
@@ -27,14 +39,17 @@
 
 .confirm_details {
   display: grid;
-  grid-template-columns: 1fr 2fr;
-  gap: 10px;
+  grid-template-columns: 3fr 2fr;
+  gap: 8px;
   text-align: left;
   margin-bottom: 20px;
+  align-items: center;
+  margin-top: 20px;
 }
 
 .detail_item {
   display: contents;
+  
 }
 
 .label {
@@ -48,24 +63,33 @@
 }
 
 .confirm_buttons button {
-  background-color: #4caf50;
-  color: white;
+  background-color:#33CC33;
+  color: black;
   border: none;
   padding: 10px 20px;
   margin: 0 10px;
   border-radius: 5px;
   cursor: pointer;
-  transition: background-color 0.3s;
+  transition: background-color 0.3s, color 0.3s, box-shadow 0.3s;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 }
 
 .confirm_buttons button:hover {
-  background-color: #45a049;
+  background-color: #FF3300;
+  color: #fff;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
 }
 
-.back_button {
-  background-color: #f44336;
+.confirm_buttons button.back_button {
+  background: linear-gradient(186deg, black, #7e7a7a8a);
+  color: #fff;
 }
 
-.back_button:hover {
-  background-color: #e53935;
+.confirm_buttons button.back_button:hover {
+  background-color: red;
+  color: yellow;
+}
+.logo {
+  width: 150px; /* Đặt kích thước chiều rộng của hình ảnh */
+  height: auto; /* Tự động tính toán chiều cao dựa trên tỷ lệ */
 }
